--- a/BestWork.html
+++ b/BestWork.html
@@ -50,10 +50,17 @@ Released   : 20140310
 	<div id="page" class="container">
 		<div id="content">
 			<div class="title">
-				<h2>About Me</h2>
+				<h2>My Best Works</h2>
 				<span class="byline"></span> </div>
-			<p>Hello! My name is Brendan Camplese and I am a student at Davenport West High School.</p>
-			<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.  Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. </p>
+			<p>Hello! My name is Brendan Camplese and I am a student at Davenport West High School!</p>
+			<p>During my time spent in Web Design, the course my school offers, I have learned a lot about designing webpages and a small amount of JavaScript. Here is a list of some of the best work I've done!</p>
+			<ul class="style3">
+				<li><a href="https://brxn16.github.io/Module-3-html-1/Curbside-Thai-master/ct_about.html">Curbside Thai</a></li>
+				<li><a href="https://brxn16.github.io/Module-3-html-1/JeddsTreeCare-master/case1/jtc_index_txt.html">Jedd's Tree Care</a></li>
+				<li><a href="https://club-website.github.io/Museum-Website/">Davenport School Museum</a></li>
+				<li><a href="https://brxn16.github.io/Car-Page/cars.html">Car Page</a> (First Website I had ever made)</li>
+				<li><a href="https://brxn16.github.io/Recipes/Recipes.html">Recipes</a></li>
+			</ul>
 		</div>
 		<div id="sidebar">
 			<div class="box2">
