--- a/About.html
+++ b/About.html
@@ -52,7 +52,7 @@ Released   : 20140310
 				<h2>About Me</h2>
 				<span class="byline"></span> </div>
 			<p>Hello! My name is Brendan Camplese and I am a student at Davenport West High School.</p>
-			<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.  Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. </p>
+			<p>I am currently enrolled in a couple coding classes, but plan on taking more in the future. I enjoy the classes I'm in now, and find it interesting, and something I could see myself doing in the future professionally. </p>
 		</div>
 		<div id="sidebar">
 			<div class="box2">
