--- a/BestWork.html
+++ b/BestWork.html
@@ -30,7 +30,7 @@ Released   : 20140310
 			<ul>
 				<li ><a href="About.html">About</a></li>
 				<li class="current_page_item"><a href="BestWork.html">Best Work</a></li>
-				<li><a href="Choice.html">Choice</a></li>
+				<li><a href="Choice.html">Hobbies</a></li>
 				<li><a href="Choice2.html">Choice 2</a></li>
 				<li><a href="WebLanguage.html">Web Language</a></li>
 			</ul>
@@ -40,7 +40,7 @@ Released   : 20140310
 		<div id="header" class="container">
 			<div id="logo">
         <a Name="top"></a>
-				<h1><a href="About.html">Portfolio</a></h1>
+				<h1><a href="BestWork.html">My Best Work</a></h1>
 				<p>Brendan Camplese</p>
 			</div>
 		</div>
@@ -52,8 +52,8 @@ Released   : 20140310
 			<div class="title">
 				<h2>My Best Works</h2>
 				<span class="byline"></span> </div>
-			<p>Hello! My name is Brendan Camplese and I am a student at Davenport West High School!</p>
-			<p>During my time spent in Web Design, the course my school offers, I have learned a lot about designing webpages and a small amount of JavaScript. Here is a list of some of the best work I've done!</p>
+			<p>Hello! My name is Brendan Camplese and I am a student at Davenport West High School, in Davenport, Iowa.</p>
+			<p>During my time spent in Web Design, the course my school offers, I have learned a lot about designing webpages, HTML language, and a small amount of JavaScript. Here is a list of some of the best work I've done!</p>
 			<ul class="style3">
 				<li><a href="https://brxn16.github.io/Module-3-html-1/Curbside-Thai-master/ct_about.html">Curbside Thai</a></li>
 				<li><a href="https://brxn16.github.io/Module-3-html-1/JeddsTreeCare-master/case1/jtc_index_txt.html">Jedd's Tree Care</a></li>
@@ -94,22 +94,21 @@ Released   : 20140310
 		</div>
 		<div id="box2">
 			<div class="title">
-				<h2>Popular Links</h2>
+				<h2>Websites That Helped me learn</h2>
 			</div>
 			<ul class="style1">
-				<li><a href="#">Semper mod quis eget mi dolore</a></li>
-				<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-				<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-				<li><a href="#">Consequat etiam lorem phasellus</a></li>
-				<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-				<li><a href="#">Semper mod quisturpis nisi</a></li>
+				<li><a href="https://www.w3schools.com/">w3 Schools</a></li>
+				<li><a href="https://learn.freecodecamp.org/responsive-web-design/basic-html-and-html5">freeCodeCamp HTML</a></li>
+				<li><a href="https://learn.freecodecamp.org/responsive-web-design/basic-css">freeCodeCamp CSS</a></li>
+				<li><a href="https://learn.freecodecamp.org/javascript-algorithms-and-data-structures/basic-javascript">freeCodeCamp JavaScript</a></li>
+				<li><a href="https://www.khanacademy.org/computing/computer-programming/programming">Khan Academy JavaScript</a></li>
 			</ul>
 		</div>
 		<div id="box3">
 			<div class="title">
-				<h2>Follow Us</h2>
+				<h2>Contact Me!</h2>
 			</div>
-			<p>Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet magna.</p>
+			<p>If you have any questions, feel free to contact me any time of day! My email and phone number are listed above.</p>
 			<ul class="contact">
 				<li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
 				<li><a href="#" class="icon icon-facebook"><span>Facebook</span></a></li>
