--- a/Choice.html
+++ b/Choice.html
@@ -30,7 +30,7 @@ Released   : 20140310
 			<ul>
 				<li><a href="About.html">About</a></li>
 				<li><a href="BestWork.html">Best Work</a></li>
-				<li class="current_page_item"><a href="Choice.html">Choice</a></li>
+				<li class="current_page_item"><a href="Choice.html">Hobbies</a></li>
 				<li><a href="Choice2.html">Choice 2</a></li>
 				<li><a href="WebLanguage.html">Web Language</a></li>
 			</ul>
@@ -39,7 +39,7 @@ Released   : 20140310
 	<div id="header-wrapper">
 		<div id="header" class="container">
 			<div id="logo">
-				<h1><a href="images/LiftBridge.jpg">Portfolio</a></h1>
+				<h1><a href="Choice.html">Hobbies</a></h1>
 				<p>Brendan Camplese</p>
 			</div>
 		</div>
@@ -49,10 +49,10 @@ Released   : 20140310
 	<div id="page" class="container">
 		<div id="content">
 			<div class="title">
-				<h2>About Me</h2>
+				<h2>My Hobbies</h2>
 				<span class="byline"></span> </div>
-			<p>Hello! My name is Brendan Camplese and I am a student at Davenport West High School.</p>
-			<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.  Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. </p>
+			<p>Hello! My name is Brendan Camplese and I am a student at Davenport West High School, in Davenport, Iowa.</p>
+			<p>In my spare time I like to spend time with friends, improve my knowledge of coding, or do photography. When I'm at home I will practice my computer science skills, because there is always room to improve. I also enjoy taking scenic pictures. Check the list below for some of my photographs! </p>
 		</div>
 		<div id="sidebar">
 			<div class="box2">
@@ -73,7 +73,7 @@ Released   : 20140310
 	<div id="footer" class="container">
 		<div id="box1">
 			<div class="title">
-				<h2>Latest Post</h2>
+				<h2>Photography</h2>
 			</div>
 			<ul class="style1">
 				<li><a href="#">Semper mod quis eget mi dolore</a></li>
@@ -86,22 +86,21 @@ Released   : 20140310
 		</div>
 		<div id="box2">
 			<div class="title">
-				<h2>Popular Links</h2>
+				<h2>Websites That Helped me learn</h2>
 			</div>
 			<ul class="style1">
-				<li><a href="#">Semper mod quis eget mi dolore</a></li>
-				<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-				<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-				<li><a href="#">Consequat etiam lorem phasellus</a></li>
-				<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-				<li><a href="#">Semper mod quisturpis nisi</a></li>
+				<li><a href="https://www.w3schools.com/">w3 Schools</a></li>
+				<li><a href="https://learn.freecodecamp.org/responsive-web-design/basic-html-and-html5">freeCodeCamp HTML</a></li>
+				<li><a href="https://learn.freecodecamp.org/responsive-web-design/basic-css">freeCodeCamp CSS</a></li>
+				<li><a href="https://learn.freecodecamp.org/javascript-algorithms-and-data-structures/basic-javascript">freeCodeCamp JavaScript</a></li>
+				<li><a href="https://www.khanacademy.org/computing/computer-programming/programming">Khan Academy JavaScript</a></li>
 			</ul>
 		</div>
 		<div id="box3">
 			<div class="title">
-				<h2>Follow Us</h2>
+				<h2>Contact Me!</h2>
 			</div>
-			<p>Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet magna.</p>
+			<p>If you have any questions, feel free to contact me any time of day! My email and phone number are listed above.</p>
 			<ul class="contact">
 				<li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
 				<li><a href="#" class="icon icon-facebook"><span>Facebook</span></a></li>
