--- a/WebLanguage.html
+++ b/WebLanguage.html
@@ -30,7 +30,7 @@ Released   : 20140310
 			<ul>
 				<li><a href="About.html">About</a></li>
 				<li><a href="BestWork.html">Best Work</a></li>
-				<li><a href="Choice.html">Choice</a></li>
+				<li><a href="Choice.html">Hobbies</a></li>
 				<li><a href="Choice2.html">Choice 2</a></li>
 				<li class="current_page_item"><a href="WebLanguage.html">Web Language</a></li>
 			</ul>
@@ -39,7 +39,7 @@ Released   : 20140310
 	<div id="header-wrapper">
 		<div id="header" class="container">
 			<div id="logo">
-				<h1><a href="images/LiftBridge.jpg">Portfolio</a></h1>
+				<h1><a href="WebLanguage.html">Web Language</a></h1>
 				<p>Brendan Camplese</p>
 			</div>
 		</div>
@@ -49,10 +49,10 @@ Released   : 20140310
 	<div id="page" class="container">
 		<div id="content">
 			<div class="title">
-				<h2>About Me</h2>
+				<h2>A Web Language That I Would Like To Learn</h2>
 				<span class="byline"></span> </div>
-			<p>Hello! My name is Brendan Camplese and I am a student at Davenport West High School.</p>
-			<p></p>
+			<p>Hello! My name is Brendan Camplese and I am a student at Davenport West High School, in Davenport, Iowa.</p>
+			<p>In school I've started learning C#, HTML, and a small amount of JavaScript. I would like to more extensively learn the HTML and JavaScript languages. Since I plan to further my career in Web Design and computer science in general, I feel like these would be beneficial. I also would like to learn Python. I feel like knowing these languages I would be able to accomplish more in my career.</p>
 		</div>
 		<div id="sidebar">
 			<div class="box2">
@@ -86,22 +86,21 @@ Released   : 20140310
 		</div>
 		<div id="box2">
 			<div class="title">
-				<h2>Popular Links</h2>
+				<h2>Websites That Helped me learn</h2>
 			</div>
 			<ul class="style1">
-				<li><a href="#">Semper mod quis eget mi dolore</a></li>
-				<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-				<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-				<li><a href="#">Consequat etiam lorem phasellus</a></li>
-				<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-				<li><a href="#">Semper mod quisturpis nisi</a></li>
+				<li><a href="https://www.w3schools.com/">w3 Schools</a></li>
+				<li><a href="https://learn.freecodecamp.org/responsive-web-design/basic-html-and-html5">freeCodeCamp HTML</a></li>
+				<li><a href="https://learn.freecodecamp.org/responsive-web-design/basic-css">freeCodeCamp CSS</a></li>
+				<li><a href="https://learn.freecodecamp.org/javascript-algorithms-and-data-structures/basic-javascript">freeCodeCamp JavaScript</a></li>
+				<li><a href="https://www.khanacademy.org/computing/computer-programming/programming">Khan Academy JavaScript</a></li>
 			</ul>
 		</div>
 		<div id="box3">
 			<div class="title">
-				<h2>Follow Us</h2>
+				<h2>Contact Me!</h2>
 			</div>
-			<p>Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet magna.</p>
+			<p>If you have any questions, feel free to contact me any time of day! My email and phone number are listed above.</p>
 			<ul class="contact">
 				<li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
 				<li><a href="#" class="icon icon-facebook"><span>Facebook</span></a></li>
