--- a/Choice.html
+++ b/Choice.html
@@ -31,7 +31,7 @@ Released   : 20140310
 				<li><a href="About.html">About</a></li>
 				<li><a href="BestWork.html">Best Work</a></li>
 				<li class="current_page_item"><a href="Choice.html">Hobbies</a></li>
-				<li><a href="Choice2.html">Choice 2</a></li>
+				<li><a href="Choice2.html">Personal Strengths</a></li>
 				<li><a href="WebLanguage.html">Web Language</a></li>
 			</ul>
 		</div>
@@ -113,7 +113,7 @@ Released   : 20140310
 	</div>
 </div>
 <div id="copyright" class="container">
-	<p>&copy; Untitled. All rights reserved. | Photos by <strong>Brendan Camplese</strong></a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+	<p>Photos by <strong>Brendan Camplese</strong></a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
 </div>
 </body>
 </html>
