--- a/Choice2.html
+++ b/Choice2.html
@@ -31,7 +31,7 @@ Released   : 20140310
 				<li><a href="About.html">About</a></li>
 				<li><a href="BestWork.html">Best Work</a></li>
 				<li><a href="Choice.html">Hobbies</a></li>
-				<li class="current_page_item"><a href="Choice2.html">Choice 2</a></li>
+				<li class="current_page_item"><a href="Choice2.html">Personal Strengths</a></li>
 				<li><a href="WebLanguage.html">Web Language</a></li>
 			</ul>
 		</div>
@@ -39,7 +39,7 @@ Released   : 20140310
 	<div id="header-wrapper">
 		<div id="header" class="container">
 			<div id="logo">
-				<h1><a href="Choice2.html">(Choice 2)</a></h1>
+				<h1><a href="Choice2.html">Personal Strengths</a></h1>
 				<p>Brendan Camplese</p>
 			</div>
 		</div>
@@ -52,7 +52,7 @@ Released   : 20140310
 				<h2>About Me</h2>
 				<span class="byline"></span> </div>
 			<p>Hello! My name is Brendan Camplese and I am a student at Davenport West High School, in Davenport, Iowa.</p>
-			<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.  Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. </p>
+			<p>I am a very determined worker. When I start a project, I try my absolute best to make sure I get it done correctly and in a timely manner. I won't give up on a task the minute it starts to become tough. I give 110 percent on all of my work.</p>
 		</div>
 		<div id="sidebar">
 			<div class="box2">
@@ -72,19 +72,6 @@ Released   : 20140310
 <div id="footer-wrapper">
 	<div id="footer" class="container">
 		<div id="box1">
-			<div class="title">
-				<h2>Latest Post</h2>
-			</div>
-			<ul class="style1">
-				<li><a href="#">Semper mod quis eget mi dolore</a></li>
-				<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-				<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-				<li><a href="#">Consequat etiam lorem phasellus</a></li>
-				<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-				<li><a href="#">Semper mod quisturpis nisi</a></li>
-			</ul>
-		</div>
-		<div id="box2">
 			<div class="title">
 				<h2>Websites That Helped me learn</h2>
 			</div>
@@ -113,7 +100,7 @@ Released   : 20140310
 	</div>
 </div>
 <div id="copyright" class="container">
-	<p>&copy; Untitled. All rights reserved. | Photos by <strong>Brendan Camplese</strong></a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+	<p>Photos by <strong>Brendan Camplese</strong></a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
 </div>
 </body>
 </html>
