--- a/BestWork.html
+++ b/BestWork.html
@@ -31,7 +31,7 @@ Released   : 20140310
 				<li ><a href="About.html">About</a></li>
 				<li class="current_page_item"><a href="BestWork.html">Best Work</a></li>
 				<li><a href="Choice.html">Hobbies</a></li>
-				<li><a href="Choice2.html">Choice 2</a></li>
+				<li><a href="Choice2.html">Personal Strengths</a></li>
 				<li><a href="WebLanguage.html">Web Language</a></li>
 			</ul>
 		</div>
@@ -81,19 +81,6 @@ Released   : 20140310
 	<div id="footer" class="container">
 		<div id="box1">
 			<div class="title">
-				<h2>Latest Post</h2>
-			</div>
-			<ul class="style1">
-				<li><a href="#">Semper mod quis eget mi dolore</a></li>
-				<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-				<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-				<li><a href="#">Consequat etiam lorem phasellus</a></li>
-				<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-				<li><a href="#">Semper mod quisturpis nisi</a></li>
-			</ul>
-		</div>
-		<div id="box2">
-			<div class="title">
 				<h2>Websites That Helped me learn</h2>
 			</div>
 			<ul class="style1">
@@ -121,7 +108,7 @@ Released   : 20140310
 	</div>
 </div>
 <div id="copyright" class="container">
-	<p>&copy; Untitled. All rights reserved. | Photos by <strong>Brendan Camplese</strong></a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+	<p>Photos by <strong>Brendan Camplese</strong></a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
 </div>
 </body>
 </html>
