--- a/Choice.html
+++ b/Choice.html
@@ -76,12 +76,12 @@ Released   : 20140310
 				<h2>Photography</h2>
 			</div>
 			<ul class="style1">
-				<li><a href="#">Semper mod quis eget mi dolore</a></li>
-				<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-				<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-				<li><a href="#">Consequat etiam lorem phasellus</a></li>
-				<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-				<li><a href="#">Semper mod quisturpis nisi</a></li>
+				<li><a href="images/ChicagoRiver.JPG">Chicago River</a></li>
+				<li><a href="images/CherryBlossomTree.JPG">Cherry Blossom Tree</a></li>
+				<li><a href="images/ChicagoSkyline.JPG">Chicago Skyline</a></li>
+				<li><a href="images/LakeErie.jpg">Lake Erie</a></li>
+				<li><a href="images/LakeErieBeach.jpg">Beach on Lake Erie</a></li>
+				<li><a href="images/LakeErieBeachFoggy.JPG">Foggy Beach on Lake Erie</a></li>
 			</ul>
 		</div>
 		<div id="box2">
