--- a/BestWork.html
+++ b/BestWork.html
@@ -105,10 +105,8 @@ Released   : 20140310
 			</ul>
 				<a href="#top" class="button">Back To Top</a></div>
 		</div>
-	</div>
-</div>
 <div id="copyright" class="container">
-	<p>Photos by <strong>Brendan Camplese</strong></a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+	<p>Photos by <strong>Brendan Camplese</strong> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
 </div>
 </body>
 </html>
