--- a/About.html
+++ b/About.html
@@ -97,6 +97,7 @@ Released   : 20140310
 			</ul>
 				<a href="#" class="button">Back To Top</a></div>
 		</div>
+	</div>
 <div id="copyright" class="container">
 	<p>Photos by <strong>Brendan Camplese</strong> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
 </div>
