--- a/BestWork.html
+++ b/BestWork.html
@@ -39,7 +39,7 @@ Released   : 20140310
 	<div id="header-wrapper">
 		<div id="header" class="container">
 			<div id="logo">
-        <a Name="top"></a>
+        <a href="top"></a>
 				<h1><a href="BestWork.html">My Best Work</a></h1>
 				<p>Brendan Camplese</p>
 			</div>
