--- a/BestWork.html
+++ b/BestWork.html
@@ -39,7 +39,6 @@ Released   : 20140310
 	<div id="header-wrapper">
 		<div id="header" class="container">
 			<div id="logo">
-        <a href="top"></a>
 				<h1><a href="BestWork.html">My Best Work</a></h1>
 				<p>Brendan Camplese</p>
 			</div>
@@ -69,7 +68,7 @@ Released   : 20140310
 				</div>
 				<ul class="style2">
 					<li>Phone Number:<a href="tel:+15639499127"> 563-949-9127</a></li>
-					<li>Email Address:<a href="mailto:camplese123@gmail.com"</a> camplese123@gmail.com</li>
+					<li>Email Address:<a href="mailto:camplese123@gmail.com"></a> camplese123@gmail.com</li>
 				</ul>
 			</div>
 		</div>
@@ -105,6 +104,7 @@ Released   : 20140310
 			</ul>
 				<a href="#top" class="button">Back To Top</a></div>
 		</div>
+	</div>
 <div id="copyright" class="container">
 	<p>Photos by <strong>Brendan Camplese</strong> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
 </div>
