--- a/About.html
+++ b/About.html
@@ -61,7 +61,7 @@ Released   : 20140310
 				</div>
 				<ul class="style2">
 					<li>Phone Number:<a href="tel:+15639499127"> 563-949-9127</a></li>
-					<li>Email Address:<a href="mailto:camplese123@gmail.com"></a> camplese123@gmail.com</li>
+					<li>Email Address:<a href="mailto:camplese123@gmail.com"> camplese123@gmail.com</a></li>
 				</ul>
 			</div>
 		</div>
