--- a/WebLanguage.html
+++ b/WebLanguage.html
@@ -61,7 +61,7 @@ Released   : 20140310
 				</div>
 				<ul class="style2">
 					<li>Phone Number:<a href="tel:+15639499127"> 563-949-9127</a></li>
-					<li>Email Address:<a href="mailto:camplese123@gmail.com"</a> camplese123@gmail.com</li>
+					<li>Email Address:<a href="mailto:camplese123@gmail.com"> camplese123@gmail.com</a></li>
 				</ul>
 			</div>
 		</div>
@@ -98,9 +98,8 @@ Released   : 20140310
 				<a href="#" class="button">Back To Top</a></div>
 		</div>
 	</div>
-</div>
 <div id="copyright" class="container">
-	<p>Photos by <strong>Brendan Camplese</strong></a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+	<p>Photos by <strong>Brendan Camplese</strong> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
 </div>
 </body>
 </html>
