--- a/WebLanguage.html
+++ b/WebLanguage.html
@@ -66,7 +66,31 @@ Released   : 20140310
 			</div>
 		</div>
 	</div>
+	<div class="table">
+		<table align="center">
+			<th>Computer Languages</th>
+			<th>Definition</th>
+			<tr>
+				<td>HTML</td>
+				<td>Hypertext Markup Language, a standardized system for tagging text files to achieve font, color, graphic, and hyperlink effects on World Wide Web pages.
+	"an HTML file"</td>
+			</tr>
+			<tr>
+				<td>JavaScript</td>
+				<td>an object-oriented computer programming language commonly used to create interactive effects within web browsers.</td>
+			</tr>
+			<tr>
+				<td>C#</td>
+				<td>C# is a hybrid of C and C++, it is a Microsoft programming language developed to compete with Sun's Java language. C# is an object-oriented programming language used with XML-based Web services on the .NET platform and designed for improving productivity in the development of Web applications.</td>
+			</tr>
+		</table>
+		<br><br>
+		<br><br>
+	</div>
 </div>
+
+
+
 
 
 <div id="footer-wrapper">
