--- a/WebLanguage.html
+++ b/WebLanguage.html
@@ -67,9 +67,11 @@ Released   : 20140310
 		</div>
 	</div>
 	<div class="table">
-		<table align="center">
+		<table>
+		<tr>
 			<th>Computer Languages</th>
 			<th>Definition</th>
+		</tr>
 			<tr>
 				<td>HTML</td>
 				<td>Hypertext Markup Language, a standardized system for tagging text files to achieve font, color, graphic, and hyperlink effects on World Wide Web pages.
