--- a/WebLanguage.html
+++ b/WebLanguage.html
@@ -67,7 +67,7 @@ Released   : 20140310
 		</div>
 	</div>
 	<div class="table">
-		<table>
+		<table align="center">
 		<tr>
 			<th>Computer Languages</th>
 			<th>Definition</th>
