--- a/About.html
+++ b/About.html
@@ -18,7 +18,6 @@ Released   : 20140310
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Raleway:400,200,500,600,700,800,300" rel="stylesheet" />
 <link href="final.css" rel="stylesheet" type="text/css" media="all" />
-<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
 <!--[if IE 6]>
 <link href="default_ie6.css" rel="stylesheet" type="text/css" />
 <![endif]-->
@@ -100,6 +99,37 @@ Released   : 20140310
 	</div>
 <div id="copyright" class="container">
 	<p>Photos by <strong>Brendan Camplese</strong> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+	<p id="time"></p>
 </div>
+<script>
+  /*
+  Create a JavaScript Date object for the current date and time,
+  then extract the desired parts, then join them again in the desired format.
+  */
+  var currentTime = new Date(),
+      hours = currentTime.getHours(),
+      minutes = currentTime.getMinutes();
+
+  // Add a leading zero if needed
+  if (minutes < 10) {
+    minutes  = "0" + minutes;
+  }
+
+  // Add suffix and adjust hours for 12hr time if required
+	var suffix = "AM";
+	if (hours >= 12) {
+    suffix = "PM";
+    hours = hours - 12;
+	}
+	if (hours == 0) {
+	 hours = 12;
+	}
+
+  // Join the parts
+  time = hours + ":" + minutes + " " + suffix;
+
+  // Output the result to the above HTML element
+  document.getElementById("time").innerHTML = time;
+</script>
 </body>
 </html>
